--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
  - docker build -t ehtelion/docker-react -f Dockerfile.dev .
 
 script:
- - docker run ehtelion/docker-react npm run test -- --coverage
+ - docker run -e CI=true ehtelion/docker-react npm run test -- --coverage
